[gd_scene load_steps=4 format=3 uid="uid://1e6pdwgkqcqd"]

[ext_resource type="Texture2D" uid="uid://bjknvmpexnegx" path="res://resources/graphics/Bullets/PeaNormal/PeaNormal_0.png" id="1_ayr4t"]
[ext_resource type="Script" path="res://script/plants/bullets/normal_bullet.gd" id="1_j4arp"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yjd6l"]
radius = 12.6491

[node name="normal_bullet" type="Area2D"]
position = Vector2(-1, 0)
collision_layer = 8
collision_mask = 2
script = ExtResource("1_j4arp")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_ayr4t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(13, 1)
shape = SubResource("CircleShape2D_yjd6l")

[node name="delete_timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="delete_timer" to="." method="_on_delete_timer_timeout"]
